src/main/java/com/example/timelist/Error/StudentDuplicateException.java
package com.example.timelist.Error;

public class StudentDuplicateException extends RuntimeException{
}
